fixed FF width issue on friends list

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4313,6 +4313,7 @@ a.yabutton-small {
 
     .profile-background {
         float:left;
+        width:100%;
     }
 
 
@@ -4860,6 +4861,7 @@ a.yabutton-small {
     
     .profile-background {
         float:left;
+        width:100%;
     }
     
 /*-- FOOTER --*/
