--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -8,10 +8,24 @@
     </div>
 </div>
 <div class='span8 wall-container'>
-    <div id='webapp-wall-input'></div>
+    <div id='webapp-wall-input'>{% include "yabase/app/radio/wallInput.mustache" %}</div>
     <div>
     <ul id='wall'>
-    <img class='loading-mask' src='/media/images/loading-white.gif'/>
+        {% if not wall_events %}
+        <img class='loading-mask' src='/media/images/loading-white.gif'/>
+        {% else %}
+        {% for wall_event in wall_events %}
+            {% ifequal wall_event.type "M" %}
+            {% include "yabase/app/radio/wallEvent.message.mustache" %}
+            {% endifequal %}
+            {% ifequal wall_event.type "S" %}
+            {% include "yabase/app/radio/wallEvent.song.mustache" %}
+            {% endifequal %}
+            {% ifequal wall_event.type "L" %}
+            {% include "yabase/app/radio/wallEvent.like.mustache" with wall_event=wall_event%}
+            {% endifequal %}
+        {% endfor %}
+        {% endif %}
     </ul>
     </div>
     <div id='pagination-wall'></div>
