--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -1,15 +1,28 @@
 {% load i18n %}
+{% load thumbnail %}
 <div class='wall-event-message'>
+	{% if wall_event %}
+    {% thumbnail wall_event.user_picture "48x48" format='PNG' as im %}
+	<img class='user' src='{{im.url}}' width='48px' height='48px'/>
+	{% endthumbnail %}
+	{% else %}
 	<img class='user' src='<% user_picture %>' width='48px' height='48px'/>
+	{% endif %}
 	{% if request.user.is_authenticated %}
 	<div class='wall-event-remove'>
 	    <button class='yabutton-small' id='report-abuse-btn' href="#"><i class="icon-thumbs-down"></i> {% trans "report as abusive" %}</button>
+	    {% if wall_event %}
+		    {% ifequal wall_event.user request.user %}
+		    <button class='yabutton-small wall-delete' href="#" id='delete-btn'><i class="icon-trash"></i> {% trans "delete" %}</button>
+		    {% endifequal %}
+		{% else %}
 	    <%#creator%>
 	    <button class='yabutton-small wall-delete' href="#" id='delete-btn'><i class="icon-trash"></i> {% trans "delete" %}</button>
 	    <%/creator%>
+	    {% endif %}
 	</div>
 	{% endif %}
-	<p><% text %></p>
-	<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
-	<div class='date'><% formatted_start_date %></div>
+	<p>{{ wall_event.text|default:'<% text %>' }}</p>
+	<h2><a href='/app/profile/{{ wall_event.username|default:'<% user_username %>' }}/'>{{ wall_event.user_name|default:'<% user_name %>'}}</a></h2>
+	<div class='date'>{{ wall_event.start_date|default:'<% formatted_start_date %>' }}</div>
 </div>
