--- a/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='wall-event-message alert-info'>
     <img class='wall-img-song' src='/media/images/default_album.png' width='32px' height='32px'/>
-    <p><% text %></p>
-    <h2><span><% song_name %> <% song_album %> <% song_artist %></span></h2>
-    <div class='date date-comment'><% formatted_start_date %></div>
+    <p></p>
+    <h2><span>{{ wall_event.song_name|default:'<% song_name %>' }} {{ wall_event.song_album|default:'<% song_album %>' }} {{ wall_event.song_artist|default:'<% song_artist %>' }}</span></h2>
+    <div class='date date-comment'>{{ wall_event.start_date|default:'<% formatted_start_date %>' }}</div>
 </div>
