updated notifications static page

--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -1,12 +1,22 @@
 {% load i18n %}
 <div class='notification-container'>
-	<div class='<% type %>'>&nbsp;</div>
+	<div class='{{ notification.type|default:'<% type %>' }}'>&nbsp;</div>
 	<a class="close-icon" data-dismiss="alert" href="#"></a>
-	<div class='notifications-date'><% formatted_date %></div>
+	<div class='notifications-date'>{{ notification.date|default:'<% formatted_date %>' }}</div>
+    {% if notification.from_radio_uuid %}
+    <div>
+        {% trans "message from radio:" %} <a href='/app/radio/{{notification.from_radio_uuid}}/' data-uuid='<{{notification.from_radio_uuid}}' class='radio-link'>{{notification.from_radio_name}}</a>
+    </div>
+    {% else %}
     <%#from_radio_uuid%>
     <div>
         {% trans "message from radio:" %} <a href='/app/radio/<%from_radio_uuid%>/' data-uuid='<%from_radio_uuid%>' class='radio-link'><%from_radio_name%></a>
     </div>
     <%/from_radio_uuid%>
+    {% endif %}
+    {% if notification %}
+    <div class='{% if notification.read %}read{% endif %} text-notification'>{% if notification.html %}{{ notification.html|safe }}{% else %}{{ notification.text }}{% endif %}</div>
+    {% else %}
 	<div class='<%#read%>read<%/read%> text-notification'><%#html%><%{html %><%/html%><%^html%><% text %><%/html%></div>
+    {% endif %}
 </div>
