--- a/yaapp/templates/yabase/app/notifications/notificationsPage.html
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.html
@@ -2,18 +2,6 @@
 {% load i18n %}
 {% block content %}
 <div class='container' id='webapp-content'>
-    <div class='row-fluid'>
-        <div class='span12 gifts-container'>
-            <h1>{% trans "Notifications" %}</h1>
-            <button type="button" class="yabutton-small right" id='mark-all-read-btn'>{% trans "Mark all as read" %}</button>
-
-            <ul id='notifications'>
-                {% for notification in notifications %}
-                <li>{% include 'yabase/app/notifications/notification.html' %}</li>
-                {% endfor %}
-            </ul>
-            <div id='pagination'></div>
-        </div>
-    </div>
+    {% include "yabase/app/notifications/notificationsPage.mustache" %}
 </div>
 {% endblock %}
