--- a/yaapp/templates/yabase/app/top/topRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/top/topRadiosPage.mustache
@@ -1,7 +1,13 @@
 {% load i18n %}
 <div class='span12 no-margin'>
     <ul id='results' class='radio-cells'>
+    {% if not radios %}
     <img class='loading-mask' src='/media/images/loading.gif'/>
+    {% else %}
+        {% for radio in radios %}
+        <li>{% include 'yabase/app/radioCell.html' %}</li>
+        {% endfor %}
+    {% endif %}
     </ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
