--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -167,7 +167,7 @@
 
 
    <script type='text/html' id='topRadiosPageTemplate'>
-     {% include "yabase/app/top/topRadiosPage.mustache" %}
+     {% include "yabase/app/top/topRadiosPage.mustache" with radios=None %}
    </script>
 
    <script type='text/html' id='usersPageTemplate'>
