responsive version for settings menu with corresponding icons

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -13,8 +13,8 @@
             <div id='responsive-player-title'>Hello World<% name %></div>
         </div>
         <div class="responsive-header-social-btn">
-            <img id='responsive-share-btn' src="/media/app/images/responsive-heart-icon-orange.png" />
-            <img id='responsive-love-btn' src="/media/app/images/responsive-share-icon.png" />
+            <a href="#"><img id='responsive-share-btn' src="/media/app/images/responsive-heart-icon-orange.png" /></a>
+            <a href="#"><img id='responsive-love-btn' src="/media/app/images/responsive-share-icon.png" /></a>
         </div>
     </div>
 
