--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -10,7 +10,7 @@
             <span class=''>{% trans "Playlist" %}</span>
         </button>
         <button class='yabutton-small right edit-radio'>
-            <span class=''>{% trans "Settings" %}</span>
+            <span class=''>{% trans "<SPAN></SPAN>ettings" %}</span>
         </button>
     </div>
     <div class='stats'>
