--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4332,6 +4332,90 @@ a.yabutton-small {
         margin-left:8px;
     }
 
+/*-- SETTINGS MENU --*/
+    
+    #mobile-menu-content {
+        margin-left:3%;
+        margin-right:3%;    
+    }
+
+    .phone-menu-list {
+        display:block;
+        height:43px;
+        width:100%;
+        border-top:1px solid black;
+        border-left:1px solid black;
+        border-right:1px solid black;
+        box-shadow:inset 0px 1px 1px #61686c;
+        background-image: linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -o-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -moz-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -webkit-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -ms-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0, rgb(54,60,64)),
+        color-stop(1, rgb(75,81,85))
+        );
+    }
+    
+    .phone-menu-first {
+        border-radius:5px 5px 0px 0px;
+    }
+
+    .phone-menu-last {
+        border-radius:0px 0px 5px 5px;
+        border-bottom:1px solid black;
+    }
+
+    .phone-menu-list span {
+        float:left;
+        font-size: 15px;
+        color:#ced8de;
+        margin-top:14px;
+        text-shadow:0px -1px black;
+    }
+
+    .phone-menu-list img,
+    .phone-menu-list span {
+        float:left;
+    }
+
+    #phone-menu-signin img {
+        margin: 10px 12px 0px 13px;
+    }
+        
+    #phone-menu-profile img {
+        margin: 7px 12px 0px 13px;
+    }
+
+    #phone-menu-myradios img {
+        margin:9px 16px 0px 17px;
+    }
+
+    #phone-menu-notifications img {
+        margin:8px 13px 0px 15px;
+    }
+
+    #phone-menu-gifts img {
+        margin:9px 14px 0px 16px;
+    }
+
+    #phone-menu-mysettings img {
+        margin: 9px 13px 0px 15px;
+    }
+
+    #phone-menu-myfriends img {
+        margin:12px 11px 0px 15px;
+    }
+
+    #phone-menu-signout img {
+        margin:12px 14px 0px 16px;
+    }
+
+
 /*-- FOOTER --*/
 
 	#connected-users,
@@ -4878,7 +4962,90 @@ a.yabutton-small {
         float:left;
         width:100%;
     }
+
+/*-- SETTINGS MENU --*/
     
+    #mobile-menu-content {
+        margin-left:3%;
+        margin-right:3%;    
+    }
+
+    .phone-menu-list {
+        display:block;
+        height:43px;
+        width:100%;
+        border-top:1px solid black;
+        border-left:1px solid black;
+        border-right:1px solid black;
+        box-shadow:inset 0px 1px 1px #61686c;
+        background-image: linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -o-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -moz-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -webkit-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -ms-linear-gradient(bottom, rgb(54,60,64) 0%, rgb(75,81,85) 100%);
+        background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0, rgb(54,60,64)),
+        color-stop(1, rgb(75,81,85))
+        );
+    }
+    
+    .phone-menu-first {
+        border-radius:5px 5px 0px 0px;
+    }
+
+    .phone-menu-last {
+        border-radius:0px 0px 5px 5px;
+        border-bottom:1px solid black;
+    }
+
+    .phone-menu-list span {
+        float:left;
+        font-size: 15px;
+        color:#ced8de;
+        margin-top:14px;
+        text-shadow:0px -1px black;
+    }
+
+    .phone-menu-list img,
+    .phone-menu-list span {
+        float:left;
+    }
+
+    #phone-menu-signin img {
+        margin: 10px 12px 0px 13px;
+    }
+        
+    #phone-menu-profile img {
+        margin: 7px 12px 0px 13px;
+    }
+
+    #phone-menu-myradios img {
+        margin:9px 16px 0px 17px;
+    }
+
+    #phone-menu-notifications img {
+        margin:8px 13px 0px 15px;
+    }
+
+    #phone-menu-gifts img {
+        margin:9px 14px 0px 16px;
+    }
+
+    #phone-menu-mysettings img {
+        margin: 9px 13px 0px 15px;
+    }
+
+    #phone-menu-myfriends img {
+        margin:12px 11px 0px 15px;
+    }
+
+    #phone-menu-signout img {
+        margin:12px 14px 0px 16px;
+    }
+
 /*-- FOOTER --*/
 
     #connected-users,
