--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -448,7 +448,7 @@
     </div>
 </div>
 
-<div id='webapp-container'>
+<div id='webapp-container'>  
             <div id='mobile-menu-content' class='hidden-display'>
               <a href='#' id='phone-menu-signin' class='phone-menu-list phone-menu-first'>
                 <img src="/media/app/images/responsive-icon-signin.png" alt='sign in'/>
@@ -470,14 +470,14 @@
                 <img src="/media/app/images/responsive-gift-icon.png" alt='gifts'>
                 <span>Gifts</span>
               </a>
-              <a href='#' id='phone-menu-mysettings' class='phone-menu-list'>
+              <a href='#' id='phone-menu-mysettings' class='phone-menu-list phone-menu-last'>
                 <img src="/media/app/images/responsive-icon-mysettings.png" alt='settings'>
                 <span>Settings</span>
               </a>
-              <a href='#' id='phone-menu-myfriends' class='phone-menu-list phone-menu-last'>
+              <!-- <a href='#' id='phone-menu-myfriends' class='phone-menu-list phone-menu-last'>
                 <img src="/media/app/images/responsive-friends-icon.png" alt='my friends'>
                 <span>My Friends</span>
-              </a>
+              </a> -->
               <!-- <a href='#' id='phone-menu-signout' class='phone-menu-list phone-menu-last'>
                 <img src="/media/app/images/responsive-icon-signout.png" alt='sign out'/>
                 <span>Sign Out</span>
