--- a/yaapp/templates/yabase/app/userCell.mustache
+++ b/yaapp/templates/yabase/app/userCell.mustache
@@ -10,6 +10,9 @@
 	    </div>
 	</div>
 	<div>
-	    <img src='<% picture %>' width='146px' height='146px'/>
+	    <img class ='big-friend-picture'src='<% picture %>' width='146px' height='146px'/>
+	</div>
+	<div>
+	    <img class='small-friend-picture'src='<% picture %>' width='120px' height='120px'/>
 	</div>
 </div>
