--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3537,6 +3537,10 @@ a.yabutton-small {
     display:block;
 }
 
+#mobile-menu-logo {
+    display:none;
+}
+
 
 
 
@@ -3608,10 +3612,14 @@ a.yabutton-small {
         margin-top:18px;
     }
 
-    #brand-logo {
+    #mobile-menu-logo {
         display:inline;
         float:none;
         margin-top:20px;
+    }
+
+    #brand-logo {
+        display:none;
     }
 
     .navbar-fixed-top {
@@ -4613,10 +4621,14 @@ a.yabutton-small {
         margin-top:18px;
     }
 
-    #brand-logo {
+    #mobile-menu-logo {
         display:inline;
         float:none;
         margin-top:20px;
+    }
+
+    #brand-logo {
+        display:none;
     }
 
     .navbar-fixed-top {
@@ -5339,6 +5351,10 @@ a.yabutton-small {
         height: 76px;
         padding-top:1px;
         padding-bottom:0px;
+    }
+
+    #mobile-menu-logo {
+        display:none;
     }
 
 /*-- SUB-HEADER --*/
