--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -13,10 +13,12 @@
             <div id='responsive-player-title'>Hello World<% name %></div>
         </div>
         <div class="responsive-header-social-btn">
+            <a href="#"><img id='responsive-love-btn' src="/media/app/images/responsive-heart-icon-orange.png" /></a>
             <div id='mobile-menu-share'>
-                <a href="#"><img id='responsive-share-btn' src="/media/app/images/responsive-heart-icon-orange.png" /></a>
+                <a id='responsive-share-btn'href="#">
+                    <img src="/media/app/images/responsive-share-icon.png" />
+                </a>
             </div>
-            <a href="#"><img id='responsive-love-btn' src="/media/app/images/responsive-share-icon.png" /></a>
         </div>
     </div>
 
