fixed margin for menu to be wide enough

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4523,6 +4523,11 @@ a.yabutton-small {
     }
 
 /*-- LOGO MENU --*/
+    #mobile-menu-content-logo {
+        margin-left: -14px;
+        margin-right: -16px;
+        margin-top: -53px; 
+    }
 
 /*-- SHARE MENU --*/
 
